--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <!-- Open Graph data / Facebook -->
         <meta property="og:title" content="CV Marion REBIER"/>
         <meta property="og:type" content="website"/>
-        <!-- <meta property="og:url" content="http://www.example.com/"/> Changer lien dans GitHub -->
-        <!-- <meta property="og:image" content="http://example.com/image.jpg"/> Charger photo depuis GitHub -->
+        <meta property="og:url" content="https://github.com/MarionREBIER/marionrebier.github.io/"/> 
+        <meta property="og:image" content="https://github.com/MarionREBIER/marionrebier.github.io/img/portrait.jpg"/>
         <meta property="og:description" content="Présentation de mon CV sous forme de site web"/>
         
         <!-- FONTS -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
         <!-- ICONS -->
-        <script src="https://kit.fontawesome.com/fa78040039.js" crossorigin="anonymous"></script> <!-- Installation Font Awesome via CDN -->
+        <script src="https://kit.fontawesome.com/fa78040039.js" crossorigin="anonymous"></script>
         <link rel="icon" type="icon/svg" href="icons/laptop-solid.svg"/>
 
         <!-- CSS -->
